2000-06-29  Radek Doulik  <rodo@helixcode.com>

	* gnome-bindings-prop.c (bind_from_key): updated for shift

2000-06-28  Radek Doulik  <rodo@helixcode.com>

	* gnome-bindings-prop.c (string_from_key): updated for shift
	(key_from_string): likewise

2000-06-20  Radek Doulik  <rodo@helixcode.com>

	* gnome-bindings-prop.c (remove_snooper): restore grab button only
	if bindings are non empty
	(keymap_select_row): if no bindings defined, disable all editing
	widgets except Add button
	(add_button_clicked): handle properly case when no bindings
	defined yet
	(delete_button_clicked): disable editing except Add button when
	last binding is deleted
	(add_button_clicked): enable editing after binding (possibly
	first) added

2000-06-17  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (INCLUDES): Use `top_builddir' so that it works with
	builddir != srcdir.

2000-06-14  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am (gtkhtml_properties_capplet_LDADD): we include
	../src/gtkhtml-properties.o in LDADD - this is quite ugly, some
	automake volunteer? Or maybe we should move capplet to src dir?
	(gtkhtml_properties_capplet_LDADD): removed -lgconf-gtk which was
	hack and is fixed now

	* new directory for capplet
