@@ -1,3 +1,7 @@
+2000-07-21  Radek Doulik  <rodo@helixcode.com>
+
+	* main.c: updated to use gnome_config if gconf is disabled
+
 2000-06-29  Radek Doulik  <rodo@helixcode.com>
 
 	* gnome-bindings-prop.c (bind_from_key): updated for shift
